[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ConvexTools"
version = "0.0.1"
authors = [{name="Darsh Dane, email="darshdane2703@gmail.com"},]
description = "A tool that allows users to access missing functionality in Python"
readme = "README"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DD-2703/Convex"
"Bug Tracker" = "https://github.com/DD-2703/Convex/issues"